# simple-watch-copy

./: Cargo.toml  README.md  example_config.json  simple-watch-copy.service
src/: config.rs  main.rs
