[package]
name = "simple_watch_copy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.136"
serde_json = "^1.0.79"
serde_derive = "^1.0.136"
inotify = "^0.8.3"
log = "^0.4.14"
simple_logger = "^1.11.0"
clap = "^2.33.3"
